renamed trigger branches

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -2,8 +2,8 @@ name: Publish artifacts
 on:
   push:
     branches:
-      - master
-      - staging
+      - prod
+      - stage
       - dev
       - feature/*
       - bugfix/*
