--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -38,6 +38,6 @@ jobs:
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
       - name: Trigger ${{ steps.extract_branch.outputs.branch }} image build
-        if: ${{ steps.extract_branch.outputs.branch == 'master' || steps.extract_branch.outputs.branch == 'staging' }}
+        if: ${{ steps.extract_branch.outputs.branch == 'prod' || steps.extract_branch.outputs.branch == 'stage' }}
         run: |
           curl -XPOST -u "${{ secrets.githubUsername }}:${{ secrets.githubToken }}" -H "Accept: application/vnd.github.everest-preview+json"  -H "Content-Type: application/json" https://api.github.com/repos/playlegend/LegendServer/dispatches --data '{"event_type": "build_images", "client_payload": { "branch": "${{steps.extract_branch.outputs.branch}}"}}'
