added config file
Signed-off-by: Lukas Jost <lukas.jost@outlook.com>

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -9,7 +9,7 @@ on:
       - bugfix/*
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.14
